# cache-system

./: CMakeLists.txt  CachePolicy.h  LFUCache.h  LRUCache.h  README.md  testAllCachePolicy.cpp
ArcCache/: ArcCache.h  ArcCacheNode.h  ArcLfuPart.h  ArcLruPart.h
